--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.3",
+    "chartjs": "^0.3.24",
     "register-service-worker": "^1.0.0",
     "v-owl-carousel": "^1.0.7",
     "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
