--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-moment": "^4.0.0",
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
