--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.7.3",
     "chartjs": "^0.3.24",
+    "express": "^4.16.4",
     "register-service-worker": "^1.0.0",
+    "serve-static": "^1.13.2",
     "v-owl-carousel": "^1.0.7",
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
