--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
     "start": "node server.js",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "webpack --config ./webpack.config.dev.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -19,25 +19,31 @@
     "express": "^4.16.4",
     "register-service-worker": "^1.0.0",
     "serve-static": "^1.13.2",
-    "v-owl-carousel": "^1.0.7",
-    "vue": "^2.5.17",
+    "v-owl-carousel": "^1.0.8",
+    "vue": "^2.5.22",
     "vue-chartjs": "^3.4.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-moment": "^4.0.0",
     "vue-ripple-directive": "^2.0.1",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-pwa": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1",
     "serve-static": "^1.13.2",
-    "vue-template-compiler": "^2.5.17"
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "vue-loader": "^15.6.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "eslintConfig": {
     "root": true,
